--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,20 +15,24 @@
 </p> -->
 
 <div class="comments">
-  <%= render 'comments/comments' %>
-</div>
+  <h2>Comments:</h2>
+  <ul id="comments">
+    <% @post.comments.each do |comment|%>
+      <li id="comment-<%=comment.id%>">
+      <%= comment.content%>
+      <button class="delete-comment" data="<%=comment.id%>">Delete</button>
+      </li>
+    <% end %>
+  </ul>
 
-<%#= form_for(@comment, :url => post_comments_path(@post)) do |f|  %>
-<%= form_for([@post, @comment], :remote => true) do |f|  %>
-  <%= f.text_area :content %>
-
-  <p><%= f.submit %></p>
-<% end %>
-
-<!-- <div class="comments">
-  <ol>
-  </ol>
-</div> -->
+<%= form_for @comment do |f| %>
+  <label>Add a comment:</label>
+  <%= f.text_field :content %>
+  <span id= "post-field">
+    <%= f.hidden_field :post_id, value: @post.id %>
+  </span>
+  <%= f.submit "Submit", id: "submit"%>
+  <% end %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
