trying out next in show page

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,8 @@
   <%= @post.content %>
 </p>
 
+
+<button class="js-next" data-id="<%= @post.id %>">Next ---></button>
 <!-- <p>
   <%#= link_to "Load Comments", post_comments_path(@post), :class => "load_comments", :remote => true %>
 </p> -->
