--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<p class="postTitle">
   <strong>Title:</strong>
   <%= @post.title %>
 </p>
 
-<p>
+<p class="postContent">
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
 
 
 <button class="js-next" data-id="<%= @post.id %>">Next ---></button>
+<a href="#" class="js-next" data-id="<%=@post.id%>">Next</a>
 <!-- <p>
   <%#= link_to "Load Comments", post_comments_path(@post), :class => "load_comments", :remote => true %>
 </p> -->
